--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,67 @@
 .App {
   text-align: center;
+  font-family: arial;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.form {
-  height: 70vh;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  background-color: aquamarine;
-  width: 37%;
-  margin: auto;
+.Menu {
+  width: 500px;
+  height: 500px;
   border-radius: 10px;
-  padding: 20px;
-}
-
-.startBtn,
-.inputName {
-  display: block;
-  margin: 0px auto 5px;
-  width: 50%;
-  height: 8%;
-  border-radius: 5px;
-
-  font-size: medium;
-  font-weight: 600;
-}
-
-.inputLabel {
-  margin: 0 auto;
+  background-color: lightseagreen;
   display: flex;
-  color: cadetblue;
-  font-weight: 600;
-  font-size: 1.2em;
-  align-items: center;
-  justify-content: center
-}
-
-.startBtn {
-  height: inherit;
-  cursor: grabbing;
-}
-
-.startLabel {
-  width: 100%;
-  height: 6vh;
-  text-decoration: none;
-}
-
-.home {
-  width: 100%;
-  flex: 1;
-  display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Menu input, button {
+  width: 300px;
+  height: 50px;
+  margin: 5px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.Quiz {
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: lightseagreen;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.Menu, .Quiz, .EndScreen h1 {
+  color: white;
+}
+
+.EndScreen {
+  width: 500px;
+  height: 500px;
+  border-radius: 10px;
+  background-color: lightseagreen;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#nextQuestion {
+  width: 200px;
+}
+
+h3 {
+  color: #ffffff;
+
 }
